--- a/package.json
+++ b/package.json
@@ -14,9 +14,15 @@
   "license": "ISC",
   "dependencies": {
     "baucis": "^1.6.0",
+    "baucis-swagger": "^1.1.2",
+    "bcryptjs": "^2.2.0",
     "body-parser": "~1.0.1",
     "express": "^4.13.1",
+    "jsonwebtoken": "^5.0.4",
+    "jwt-simple": "^0.3.0",
     "mongoose": "^4.0.7",
-    "mongoose-unique-validator": "^0.4.1"
+    "mongoose-unique-validator": "^0.4.1",
+    "passport": "^0.2.2",
+    "passport-local": "^1.0.0"
   }
 }
