--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^5.0.4",
     "jwt-simple": "^0.3.0",
     "mongoose": "^4.0.7",
+    "mongoose-paginate": "^4.0.0",
     "mongoose-unique-validator": "^0.4.1",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0"
