--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "baucis-swagger": "^1.1.2",
     "bcryptjs": "^2.2.0",
     "body-parser": "~1.0.1",
+    "cors": "^2.7.1",
     "express": "^4.13.1",
     "jsonwebtoken": "^5.0.4",
     "jwt-simple": "^0.3.0",
     "mongoose": "^4.0.7",
+    "mongoose-paginate": "^4.0.0",
     "mongoose-unique-validator": "^0.4.1",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0"
