--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "set NODE_ENV=production node app",
+    "dev": "nodemon app",
+    "debug": "node-inspector --web-port 8082 --save-live-edit true && node --debug-brk app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
