--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "restapi for unu",
   "main": "app.js",
   "scripts": {
-    "start": "set NODE_ENV=production node app",
+    "start": "node app",
     "dev": "nodemon app",
     "debug": "node-inspector --web-port 8082 --save-live-edit true && node --debug-brk app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
