--- a/client/bower.json
+++ b/client/bower.json
@@ -19,7 +19,8 @@
     "ng-table": "~0.5.4",
     "angular-ui-router-anim-in-out": "~0.0.13",
     "angular-material": "0.11.2",
-    "moment": "~2.10.6"
+    "moment": "~2.10.6",
+    "sc-date-time": "~1.1.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
