--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "restapi for unu",
   "main": "app.js",
   "scripts": {
-    "start": "node app",
+    "start": "nodemon app && cd client && gulp default",
     "dev": "nodemon app",
     "debug": "node-inspector --web-port 8082 --save-live-edit true && node --debug-brk app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^5.0.4",
     "jwt-simple": "^0.3.0",
     "mongoose": "^4.2.8",
+    "mongoose-deep-populate": "^2.0.3",
     "mongoose-paginate": "^4.0.0",
     "mongoose-unique-validator": "^0.4.1",
     "passport": "^0.2.2",
