--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "unu-api",
+  "name": "unu-web",
   "version": "1.0.0",
-  "description": "restapi for unu",
+  "description": "Sistema de Matrícula",
   "main": "app.js",
   "scripts": {
     "start": "nodemon app && cd client && gulp default",
@@ -23,8 +23,7 @@
     "express": "^4.13.1",
     "jsonwebtoken": "^5.0.4",
     "jwt-simple": "^0.3.0",
-    "mongoose": "^4.2.8",
-    "mongoose-deep-populate": "^2.0.3",
+    "mongoose": "^4.3.1",
     "mongoose-paginate": "^4.0.0",
     "mongoose-unique-validator": "^0.4.1",
     "passport": "^0.2.2",
