--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Sistema de Matrícula",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app && cd client && gulp default",
+    "start": "nodemon app",
     "dev": "nodemon app",
+    "client":"cd client && gulp",
     "debug": "node-inspector --web-port 8082 --save-live-edit true && node --debug-brk app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,7 +25,7 @@
     "jsonwebtoken": "^5.0.4",
     "jwt-simple": "^0.3.0",
     "mongoose": "^4.3.1",
-    "mongoose-paginate": "^4.0.0",
+    "mongoose-paginate": "^5.0.0",
     "mongoose-unique-validator": "^0.4.1",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0"
