--- a/client/bower.json
+++ b/client/bower.json
@@ -20,7 +20,8 @@
     "angular-ui-router-anim-in-out": "~0.0.13",
     "angular-material": "0.11.2",
     "moment": "~2.10.6",
-    "sc-date-time": "~1.1.3"
+    "sc-date-time": "~1.1.3",
+    "Angular-Hero": "angular-hero#~0.0.7"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
