--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "build": "cd client && gulp build",
-    "start": "nodemon app",
+    "start": "cd client && gulp build && cd .. &&nodemon app",
     "dev": "nodemon app",
     "client":"cd client && gulp",
     "debug": "node-inspector --web-port 8082 --save-live-edit true && node --debug-brk app.js",
