Se agrego scripts install-all

--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "app.js",
   "scripts": {
     "build": "cd client && gulp build",
-    "start": "cd client && gulp build && cd .. &&nodemon app",
+    "start": "node  app",
     "dev": "nodemon app",
     "client":"cd client && gulp",
     "debug": "node-inspector --web-port 8082 --save-live-edit true && node --debug-brk app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "install-all": ".\\scripts\\install-all.sh",
+    "build-all": ".\\scripts\\build-all.sh",
+    "postinstall": "cd client && npm run build"
   },
   "keywords": [
     "unu"
