--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "build":"npm install && bower install && .\\node_modules\\gulp\\bin\\gulp build"
   }
 }
