--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tramite-app-client",
-  "version": "0.0.0",
+  "name": "unu-client",
+  "version": "1.0.0",
   "dependencies": {
     "angular": "^1.4.7",
     "angular-animate": "^1.4.7",
@@ -34,9 +34,6 @@
     "gulp-usemin": "^0.3.16",
     "gulp-watch": "^4.3.5",
     "main-bower-files": "^2.9.0"
-  },
-  "engines": {
-    "node": ">=0.10.0"
   },
   "scripts": {
     "test": "grunt test",
