Se corrigio ruta para bower install

--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,6 @@
   },
   "scripts": {
     "test": "grunt test",
-    "build": "npm install && .\\node_modules\\bower\\bin\\bower install && .\\node_modules\\gulp\\bin\\gulp build"
+    "build": "npm install && ./node_modules/bower/bin/bower install && ./node_modules/gulp/bin/gulp build"
   }
 }
