--- a/client/package.json
+++ b/client/package.json
@@ -2,16 +2,9 @@
   "name": "unu-client",
   "version": "1.0.0",
   "dependencies": {
-    "angular": "^1.4.7",
-    "angular-animate": "^1.4.7",
-    "angular-aria": "^1.4.7",
-    "angular-material": "^0.11.4",
     "gulp-angular-filesort": "^1.1.1",
     "gulp-inject": "^3.0.0",
-    "gulp-sourcemaps": "^1.6.0"
-  },
-  "repository": {},
-  "devDependencies": {
+    "gulp-sourcemaps": "^1.6.0",
     "bower": "^1.7.2",
     "gulp": "^3.9.0",
     "gulp-angular-builder": "^0.5.3",
