--- a/client/bower.json
+++ b/client/bower.json
@@ -26,6 +26,9 @@
   "devDependencies": {
     "angular-mocks": "^1.3.0"
   },
+  "resolutions": {
+    "angular": "~1.4.8"
+  },
   "appPath": "app",
   "moduleName": "unuApp"
 }
