--- a/client/bower.json
+++ b/client/bower.json
@@ -27,7 +27,8 @@
     "angular-mocks": "^1.3.0"
   },
   "resolutions": {
-    "angular": "~1.4.8"
+    "angular": "~1.4.7",
+    "angular-animate": "~1.4.7",
   },
   "appPath": "app",
   "moduleName": "unuApp"
