--- a/client/bower.json
+++ b/client/bower.json
@@ -28,7 +28,7 @@
   },
   "resolutions": {
     "angular": "~1.4.7",
-    "angular-animate": "~1.4.7",
+    "angular-animate": "~1.4.7"
   },
   "appPath": "app",
   "moduleName": "unuApp"
