--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcryptjs": "^2.2.0",
     "body-parser": "~1.0.1",
     "cors": "^2.7.1",
+    "dotenv": "^2.0.0",
     "express": "^4.13.1",
     "jsonwebtoken": "^5.0.4",
     "jwt-simple": "^0.3.0",
