--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.7.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.1",
+    "jsonschema": "^1.0.3",
     "jsonwebtoken": "^5.0.4",
     "jwt-simple": "^0.3.0",
     "mongoose": "^4.3.1",
