--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "jsonschema": "^1.0.3",
     "jsonwebtoken": "^5.0.4",
     "jwt-simple": "^0.3.0",
+    "lockfile": "^1.0.1",
     "mongoose": "^4.3.1",
     "mongoose-paginate": "^5.0.0",
     "mongoose-unique-validator": "^0.4.1",
+    "node-watch": "^0.3.5",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "q": "^1.4.1",
