--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongoose": "^4.3.1",
     "mongoose-paginate": "^5.0.0",
     "mongoose-unique-validator": "^0.4.1",
+    "morgan": "^1.7.0",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "q": "^1.4.1",
