--- a/client/bower.json
+++ b/client/bower.json
@@ -18,10 +18,10 @@
     "angular-loading-bar": "~0.7.1",
     "ng-table": "~0.5.4",
     "angular-ui-router-anim-in-out": "~0.0.13",
-    "angular-material": "0.11.2",
     "moment": "~2.10.6",
     "sc-date-time": "~1.1.3",
-    "Angular-Hero": "angular-hero#~0.0.7"
+    "Angular-Hero": "angular-hero#~0.0.7",
+    "angular-material": "~1.0.6"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
