--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^5.0.4",
     "jwt-simple": "^0.3.0",
     "lockfile": "^1.0.1",
+    "moment": "^2.12.0",
     "mongoose": "^4.3.1",
     "mongoose-paginate": "^5.0.0",
     "mongoose-unique-validator": "^0.4.1",
