--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-NODE_ENV=test
+NODE_ENV=production
 KEY_SECRET=UPM0WbW4C8yzN9Yz6JhNmNG8TJ6Ab7bU
+MONGOLAB_URI=mongodb://unu-developer:d3v3l0p3r@aws-us-east-1-portal.13.dblayer.com:10680/unu-production
