--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "q": "^1.4.1",
+    "throng": "^3.0.0",
     "underscore": "^1.8.3"
   }
 }
