--- a/client/bower.json
+++ b/client/bower.json
@@ -21,7 +21,8 @@
     "moment": "~2.10.6",
     "sc-date-time": "~1.1.3",
     "Angular-Hero": "angular-hero#~0.0.7",
-    "angular-material": "~1.0.6"
+    "angular-material": "~1.0.6",
+    "angular-material-datetimepicker": "~1.4.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
