--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mongoose-paginate": "^5.0.0",
     "mongoose-unique-validator": "^0.4.1",
     "morgan": "^1.7.0",
+    "multer": "^1.1.0",
     "node-watch": "^0.3.5",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
