--- a/package.json
+++ b/package.json
@@ -45,5 +45,6 @@
     "q": "^1.4.1",
     "throng": "^3.0.0",
     "underscore": "^1.8.3"
-  }
+  },
+  "cacheDirectories":["client/app/public","node_modules"]
 }
