--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 NODE_ENV=production
 KEY_SECRET=UPM0WbW4C8yzN9Yz6JhNmNG8TJ6Ab7bU
 OPENAPP=true
+EMAIL_USER=nmedinson@gmail.com
+EMAIL_PASSWORD=#alexander#
