--- a/client/bower.json
+++ b/client/bower.json
@@ -23,7 +23,8 @@
     "Angular-Hero": "angular-hero#~0.0.7",
     "angular-material": "~1.0.6",
     "angular-material-datetimepicker": "~1.4.0",
-    "ng-file-upload": "~12.0.4"
+    "ng-file-upload": "~12.0.4",
+    "angular-filter": "^0.5.8"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
