--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "baucis-swagger": "^1.1.2",
     "bcryptjs": "^2.2.0",
     "body-parser": "~1.0.1",
+    "connect-timeout": "^1.7.0",
     "cors": "^2.7.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.1",
